SERVER-35780 Timestamp multiple index builds during rename