src/mongo/dbtests/storage_timestamp_tests.cpp
@@ -396,8 +396,8 @@ public:
 
         // getCollectionIdent() returns the ident for the given namespace in the KVCatalog.
         // getAllIdents() actually looks in the RecordStore for a list of all idents, and is thus
-        // versioned by timestamp. These tests do not do any renames, so we can expect the
-        // namespace to have a consistent ident across timestamps, if it exists.
+        // versioned by timestamp. We can expect a namespace to have a consistent ident across
+        // timestamps, provided the collection does not get renamed.
         auto expectedIdent = kvCatalog->getCollectionIdent(nss.ns());
         auto idents = kvCatalog->getAllIdents(_opCtx);
         auto found = std::find(idents.begin(), idents.end(), expectedIdent);
@@ -464,10 +464,10 @@ public:
         return collAndIdxIdents[0];
     }
 
-    std::tuple<std::string, std::string> getNewCollectionIndexIdent(
-        KVCatalog* kvCatalog, std::vector<std::string>& origIdents) {
-        // Find the collection and index ident by performing a set difference on the original
-        // idents and the current idents.
+    std::vector<std::string> _getIdentDifference(KVCatalog* kvCatalog,
+                                                 std::vector<std::string>& origIdents) {
+        // Find the ident difference by performing a set difference on the original idents and the
+        // current idents.
         std::vector<std::string> identsWithColl = kvCatalog->getAllIdents(_opCtx);
         std::sort(origIdents.begin(), origIdents.end());
         std::sort(identsWithColl.begin(), identsWithColl.end());
@@ -477,6 +477,12 @@ public:
                             origIdents.begin(),
                             origIdents.end(),
                             std::back_inserter(collAndIdxIdents));
+        return collAndIdxIdents;
+    }
+    std::tuple<std::string, std::string> getNewCollectionIndexIdent(
+        KVCatalog* kvCatalog, std::vector<std::string>& origIdents) {
+        // Find the collection and index ident difference.
+        auto collAndIdxIdents = _getIdentDifference(kvCatalog, origIdents);
 
         ASSERT(collAndIdxIdents.size() == 1 || collAndIdxIdents.size() == 2);
         if (collAndIdxIdents.size() == 1) {
@@ -489,6 +495,34 @@ public:
         }
 
         MONGO_UNREACHABLE;
+    }
+
+    /**
+     * Note: expectedNewIndexIdents should include the _id index.
+     */
+    void assertRenamedCollectionIdentsAtTimestamp(KVCatalog* kvCatalog,
+                                                  std::vector<std::string>& origIdents,
+                                                  size_t expectedNewIndexIdents,
+                                                  Timestamp timestamp) {
+        OneOffRead oor(_opCtx, timestamp);
+        // Find the collection and index ident difference.
+        auto collAndIdxIdents = _getIdentDifference(kvCatalog, origIdents);
+        size_t newNssIdents, newIdxIdents;
+        newNssIdents = newIdxIdents = 0;
+        for (const auto& ident : collAndIdxIdents) {
+            ASSERT(ident.find("index-") == 0 || ident.find("collection-") == 0)
+                << "Ident is not an index or collection: " << ident;
+            if (ident.find("collection-") == 0) {
+                ASSERT(++newNssIdents == 1) << "Expected new collection idents (1) differ from "
+                                               "actual new collection idents ("
+                                            << newNssIdents << ")";
+            } else {
+                newIdxIdents++;
+            }
+        }
+        ASSERT(expectedNewIndexIdents == newIdxIdents)
+            << "Expected new index idents (" << expectedNewIndexIdents
+            << ") differ from actual new index idents (" << newIdxIdents << ")";
     }
 
     void assertIdentsExistAtTimestamp(KVCatalog* kvCatalog,
@@ -1942,6 +1976,116 @@ public:
     }
 };
 
+class TimestampMultiIndexBuildsDuringRename : public StorageTimestampTest {
+public:
+    void run() {
+        auto kvStorageEngine =
+            dynamic_cast<KVStorageEngine*>(_opCtx->getServiceContext()->getStorageEngine());
+        KVCatalog* kvCatalog = kvStorageEngine->getCatalog();
+
+        NamespaceString nss("unittests.timestampMultiIndexBuildsDuringRename");
+        reset(nss);
+
+        AutoGetCollection autoColl(_opCtx, nss, LockMode::MODE_X, LockMode::MODE_X);
+
+        const LogicalTime insertTimestamp = _clock->reserveTicks(1);
+        {
+            WriteUnitOfWork wuow(_opCtx);
+            insertDocument(autoColl.getCollection(),
+                           InsertStatement(BSON("_id" << 0 << "a" << 1 << "b" << 2 << "c" << 3),
+                                           insertTimestamp.asTimestamp(),
+                                           presentTerm));
+            wuow.commit();
+            ASSERT_EQ(1, itCount(autoColl.getCollection()));
+        }
+
+        DBDirectClient client(_opCtx);
+        {
+            IndexSpec index1;
+            // Name this index for easier querying.
+            index1.addKeys(BSON("a" << 1)).name("a_1");
+            IndexSpec index2;
+            index2.addKeys(BSON("b" << 1)).name("b_1");
+
+            std::vector<const IndexSpec*> indexes;
+            indexes.push_back(&index1);
+            indexes.push_back(&index2);
+            client.createIndexes(nss.ns(), indexes);
+        }
+
+        NamespaceString renamedNss("unittestsRename.timestampMultiIndexBuildsDuringRename");
+        reset(renamedNss);
+
+        // Save the pre-state idents so we can capture the specific ident related to index
+        // creation.
+        std::vector<std::string> origIdents = kvCatalog->getAllIdents(_opCtx);
+
+        // Rename collection.
+        BSONObj renameResult;
+        client.runCommand(
+            "admin",
+            BSON("renameCollection" << nss.ns() << "to" << renamedNss.ns() << "dropTarget" << true),
+            renameResult);
+
+        const auto createIndexesDocument = queryOplog(BSON("ns" << renamedNss.db() + ".$cmd"
+                                                                << "o.createIndexes"
+                                                                << BSON("$exists" << true)));
+
+        // Find index creation timestamps.
+        const auto createIndexesString =
+            createIndexesDocument["o"].embeddedObject()["createIndexes"].toString();
+        const std::string filterString = "createIndexes: \"";
+        const NamespaceString tmpName(
+            renamedNss.db(),
+            createIndexesString.substr(filterString.size(),
+                                       createIndexesString.size() - filterString.size() - 1));
+        const std::string createIndexMsg = "Creating indexes. Coll: " + tmpName.ns();
+        const Timestamp indexCreateInitTs = queryOplog(BSON("op"
+                                                            << "n"
+                                                            << "o.msg"
+                                                            << createIndexMsg))["ts"]
+                                                .timestamp();
+
+        const Timestamp indexAComplete = createIndexesDocument["ts"].timestamp();
+        const Timestamp indexBComplete = queryOplog(BSON("op"
+                                                         << "c"
+                                                         << "o.createIndexes"
+                                                         << tmpName.coll()
+                                                         << "o.name"
+                                                         << "b_1"))["ts"]
+                                             .timestamp();
+
+        // We expect one new collection ident and three new index idents (including the _id index)
+        // during this rename. The a_1 and b_1 index idents are created and persisted with the
+        // "ready: false" write.
+        assertRenamedCollectionIdentsAtTimestamp(
+            kvCatalog, origIdents, /*expectedNewIndexIdents*/ 3, indexCreateInitTs);
+
+        ASSERT_FALSE(
+            getIndexMetaData(getMetaDataAtTime(kvCatalog, renamedNss, indexCreateInitTs), "a_1")
+                .ready);
+        ASSERT_FALSE(
+            getIndexMetaData(getMetaDataAtTime(kvCatalog, renamedNss, indexCreateInitTs), "b_1")
+                .ready);
+
+        // Assert the `a_1` index becomes ready at the next oplog entry time.
+        ASSERT_TRUE(
+            getIndexMetaData(getMetaDataAtTime(kvCatalog, renamedNss, indexAComplete), "a_1")
+                .ready);
+        ASSERT_FALSE(
+            getIndexMetaData(getMetaDataAtTime(kvCatalog, renamedNss, indexAComplete), "b_1")
+                .ready);
+
+        // Assert the `b_1` index becomes ready at the last oplog entry time.
+        ASSERT_TRUE(
+            getIndexMetaData(getMetaDataAtTime(kvCatalog, renamedNss, indexBComplete), "a_1")
+                .ready);
+        ASSERT_TRUE(
+            getIndexMetaData(getMetaDataAtTime(kvCatalog, renamedNss, indexBComplete), "b_1")
+                .ready);
+    }
+};
+
 class TimestampIndexDrops : public StorageTimestampTest {
 public:
     void run() {
@@ -2574,6 +2718,7 @@ public:
         add<TimestampIndexBuilds<false>>();
         add<TimestampIndexBuilds<true>>();
         add<TimestampMultiIndexBuilds>();
+        add<TimestampMultiIndexBuildsDuringRename>();
         add<TimestampIndexDrops>();
         // TimestampIndexBuilderOnPrimary<Background>
         add<TimestampIndexBuilderOnPrimary<false>>();
